# ndk-samples

./: 学习记录.txt
hello-jni/app/: build.gradle
hello-jni/app/src/main/: AndroidManifest.xml
hello-jni/app/src/main/cpp/: CMakeLists.txt  hello-jni.c
hello-jni/app/src/main/java/com/example/hellojni/: HelloJni.kt
hello-libs/app/: build.gradle
hello-libs/app/src/main/cpp/: CMakeLists.txt
hello-libs/app/src/main/java/com/example/hellolibs/: MainActivity.java
hello-libs/gen-libs/: build.gradle
hello-libs/gen-libs/src/main/cpp/: CMakeLists.txt
hello-libs/gen-libs/src/main/cpp/gmath/: CMakeLists.txt
hello-libs/gen-libs/src/main/cpp/gperf/: CMakeLists.txt
prefab/: README.md
prefab/curl-ssl/: README.md
prefab/dependency-creation/: README.md
prefab/dependency-creation/mylibrary/: build.gradle
prefab/dependency-integration/: README.md
